Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13937

Aria engine: Internal Error 160 after partition handling

    XMLWordPrintable

Details

    • 10.2.10, 5.5.58

    Description

      Partitions get corrupted: internal error 160.
      Unable to repair (with Alter table).
      Symptom: The AutoIncrement value goes wild (from a few thousand, to numbers with 20+ digits).
      Viewing an allegedly uncorrupted partition shows extremely distorted data.
      Fault appears to follow adding a new partition (partitions by date) although the new
      partition is for a future date, so not yet used.
      Only fix discovered, so far, is to drop the table.
      Not yet isolated the exact trigger.
      Tables schema: ARIA ROW_FORMAT=PAGE TRANSACTIONAL=1 PAGE_CHECKSUM=1
      (FYI: same application code using MyISAM does not fail)
      What causes internal error 160?

      Attachments

        Activity

          People

            serg Sergei Golubchik
            AndyMidd Andy Middleton
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: